--- a/nc-games/src/App.css
+++ b/nc-games/src/App.css
@@ -44,7 +44,7 @@
   width: 50%;
   margin-left: 25%;
   border-color: #514864;
-  color: #748786;
+  color: #514864;
   background-color: #E0E0df;
 }
 
@@ -55,6 +55,8 @@
   border-bottom: solid;
   height:100%;
   width:100%;
+  margin: 0px;
+
 
 }
 
@@ -64,7 +66,7 @@
   width: 50%;
   margin-left: 25%;
   border-color: #514864;
-  color: #748786;
+  color: #514864;
   background-color: #E0E0df;
 }
 
